# app/Http/Controllers/LivroController.php
@@ -3,7 +3,13 @@
 namespace App\Http\Controllers;
 
 use App\Models\Livro;
+use App\Validators\LivroValidator;
 use Illuminate\Http\Request;
+use Illuminate\Support\Arr;
+
+use const App\Traits\RESPONSE_BAD_REQUEST;
+use const App\Traits\RESPONSE_CREATED;
+use const App\Traits\RESPONSE_NOT_ACCEPTABLE;
 
 class LivroController extends Controller
 {
@@ -82,8 +88,28 @@ class LivroController extends Controller
      */
     public function store(Request $request)
     {
-        $livro = Livro::create($request->all());
-        return response()->json($livro, 201);
+        try {
+            $livroValidator = new LivroValidator($request->all());
+
+            if (!$livroValidator->validate()) {
+                return $this->alert($livroValidator->errors(), RESPONSE_NOT_ACCEPTABLE);
+            }
+
+            $valid_data = $livroValidator->validated();
+            $livro = Livro::create($valid_data);
+
+            if (Arr::has($valid_data, 'autores')) {
+                $livro->autores()->sync($valid_data['autores']);
+            }
+
+            if (Arr::has($valid_data, 'assuntos')) {
+                $livro->assuntos()->sync($valid_data['assuntos']);
+            }
+
+            return $this->success($livro, __('livro.create'), RESPONSE_CREATED);
+        } catch (\Throwable $err) {
+            return $this->error($err->getMessage(), RESPONSE_BAD_REQUEST);
+        }
     }
 
     /**
@@ -116,9 +142,31 @@ class LivroController extends Controller
      */
     public function update(Request $request, $id)
     {
+        // try {
+        $livroValidator = new LivroValidator(array_merge($request->all(), ['id' => $id]));
+
+        if (!$livroValidator->validate()) {
+            return $this->alert($livroValidator->errors(), RESPONSE_NOT_ACCEPTABLE);
+        }
+
+        $valid_data = $livroValidator->validated();
+        dd($valid_data);
+
         $livro = Livro::findOrFail($id);
-        $livro->update($request->all());
-        return response()->json($livro, 200);
+        $livro->update($valid_data);
+
+        if (Arr::has($valid_data, 'autores')) {
+            $livro->autores()->sync($valid_data['autores']);
+        }
+
+        if (Arr::has($valid_data, 'assuntos')) {
+            $livro->assuntos()->sync($valid_data['assuntos']);
+        }
+
+        return $this->success($livro, __('livro.update'));
+        // } catch (\Throwable $err) {
+        //     return $this->error($err->getMessage(), RESPONSE_BAD_REQUEST);
+        // }
     }
 
     /**
