# app/Models/Livro.php
@@ -3,6 +3,7 @@
 namespace App\Models;
 
 use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Relations\BelongsToMany;
 
 /**
  * @OA\Schema(
@@ -13,7 +14,18 @@ use Illuminate\Database\Eloquent\Model;
  *     @OA\Property(property="titulo", type="string", example="Titulo de teste"),
  *     @OA\Property(property="editora", type="string", example="Editora de teste"),
  *     @OA\Property(property="edicao", type="integer", example="2"),
- *     @OA\Property(property="anopublicacao", type="integer", example="2023")
+ *     @OA\Property(property="anopublicacao", type="integer", example="2023"),
+ *     @OA\Property(property="valor", type="number", example="20.00"),
+ *     @OA\Property(
+ *          property="autores",
+ *          type="array",
+ *          @OA\Items(ref="#/components/schemas/Autor")
+ *     ),
+ *     @OA\Property(
+ *          property="assuntos",
+ *          type="array",
+ *          @OA\Items(ref="#/components/schemas/Assunto")
+ *     ),
  * )
  */
 class Livro extends Model
@@ -26,5 +38,18 @@ class Livro extends Model
         'editora',
         'edicao',
         'anopublicacao',
+        'valor',
     ];
+
+    // protected $with = ['autores', 'assuntos'];
+
+    public function autores(): BelongsToMany
+    {
+        return $this->belongsToMany(Autor::class, 'livro_autor', 'livro_codl', 'autor_codau');
+    }
+
+    public function assuntos(): BelongsToMany
+    {
+        return $this->belongsToMany(Assunto::class, 'livro_assunto', 'livro_codl', 'assunto_codas');
+    }
 }
