# resources/lang/pt-br/assunto.php
@@ -1,0 +1,8 @@
+<?php
+
+return [
+    'create'    => 'Assunto criado com sucesso.',
+    'update'    => 'Assunto alterado com sucesso.',
+    'delete'    => 'Assunto excluído com sucesso.',
+    'notfound'  => 'Assunto não encontrado.',
+];
