# resources/lang/pt-br/autor.php
@@ -1,0 +1,8 @@
+<?php
+
+return [
+    'create'    => 'Autor criado com sucesso.',
+    'update'    => 'Autor alterado com sucesso.',
+    'delete'    => 'Autor excluído com sucesso.',
+    'notfound'  => 'Autor não encontrado.',
+];
